add body section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
         </div>    
     </header-section>
 
-    <body-section></body-section>
+    <!-- Body sevtion -->
+    <body-section>
+        <div class="container">
+            <span class="month">
+                <ul>
+                    <li>January</li>
+                    <li>February</li>
+                    <li>March</li>
+                    <li>April</li>
+                    <li>May</li>
+                    <li>June</li>
+                    <li>July</li>
+                    <li>August</li>
+                    <li>September</li>
+                    <li>October</li>
+                    <li>November</li>
+                    <li>December</li>
+                </ul>
+            </span>
+            <div class="content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam ipsam similique alias natus provident autem, rerum architecto sequi nostrum dicta?</p>
+            </div>
+            <div class="days">
+                <ol>
+                    <li>Monday</li>
+                    <li>Tuesday</li>
+                    <li>Wednesday</li>
+                    <li>Thursday</li>
+                    <li>Friday</li>
+                    <li>Saturday</li>
+                    <li>Sunday</li>
+                </ol>
+            </div>
+        </div>
+    </body-section>
 
     <footer-section></footer-section>
     
