add footer section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Header part -->
     <header-section>
         <div class="header-part">
             <h3 class="heading">Sudhakar Bhanudas Bangar</h3>
-        </div>    
+        </div>
     </header-section>
 
     <!-- Body sevtion -->
@@ -34,7 +36,8 @@
                 </ul>
             </span>
             <div class="content">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam ipsam similique alias natus provident autem, rerum architecto sequi nostrum dicta?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam ipsam similique alias natus provident
+                    autem, rerum architecto sequi nostrum dicta?</p>
             </div>
             <div class="days">
                 <ol>
@@ -50,7 +53,13 @@
         </div>
     </body-section>
 
-    <footer-section></footer-section>
-    
+    <!-- Footer-section -->
+    <footer-section>
+        <div class="footer-section">
+            <p>copyright &copy;2024</p>
+        </div>
+    </footer-section>
+
 </body>
+
 </html>
